--- a/Python Basics/8.Regular Expression/RegEx.ipynb
+++ b/Python Basics/8.Regular Expression/RegEx.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -62,26 +62,6 @@
     "\n",
     "print('Start Index:', match.start()) \n",
     "print('End Index:', match.end()) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "255.14285714285714"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "12502/49"
    ]
   },
   {
@@ -128,19 +108,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Geeks', 'Geeks', 'geeks', 'Geeks']\n"
+      "['Geeks']\n"
      ]
     }
    ],
    "source": [
-    "print(re.findall(r'[Gg]eeks', 'GeeksforGeeks: \\ A computer science portal for geeks Geeks'))"
+    "print(re.findall(r'\\BGeeks', 'GeeksforGeeks: \\ A computer science portal for geeks Geeks'))"
    ]
   },
   {
@@ -179,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -215,30 +195,9 @@
    ],
    "source": [
     "text = \"Hello, world! Hello again.\"\n",
-    "pattern = r'\\bHello\\b'\n",
+    "pattern = r'\\bHello'\n",
     "\n",
     "matches = re.findall(pattern, text)\n",
-    "print(matches)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Hell']\n"
-     ]
-    }
-   ],
-   "source": [
-    "text = \"Hello, world!Shell\"\n",
-    "pattern = r'hell\\B'\n",
-    "\n",
-    "matches = re.findall(pattern, text, re.IGNORECASE)\n",
     "print(matches)"
    ]
   },
@@ -251,13 +210,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['hell']\n"
+      "['ell', 'ell']\n"
      ]
     }
    ],
    "source": [
     "text = \"Hello, world!Shell\"\n",
-    "pattern = r'\\Bhell'\n",
+    "pattern = r'\\Bell'\n",
     "\n",
     "matches = re.findall(pattern, text, re.IGNORECASE)\n",
     "print(matches)"
@@ -272,42 +231,63 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1', '2', '3']\n"
+      "['ell', 'ell']\n"
      ]
     }
    ],
    "source": [
-    "text = \"There are 123 apples.\"\n",
-    "pattern = r'\\d'\n",
+    "text = \"Hello, world!Shell\"\n",
+    "pattern = r'\\Bell'\n",
     "\n",
-    "matches = re.findall(pattern, text)\n",
-    "print(matches)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['T', 'h', 'e', 'r', 'e', ' ', 'a', 'r', 'e', ' ', ' ', 'a', 'p', 'p', 'l', 'e', 's', '.']\n"
-     ]
-    }
-   ],
-   "source": [
-    "text = \"There are 123 apples.\"\n",
-    "pattern = r'\\D'\n",
-    "\n",
-    "matches = re.findall(pattern, text)\n",
+    "matches = re.findall(pattern, text, re.IGNORECASE)\n",
     "print(matches)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123']\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"There are 123 apples.\"\n",
+    "pattern = r'\\d+'\n",
+    "\n",
+    "matches = re.findall(pattern, text)\n",
+    "print(matches)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['There are ', ' apples.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"There are 123 apples.\"\n",
+    "pattern = r'\\D+'\n",
+    "\n",
+    "matches = re.findall(pattern, text)\n",
+    "print(matches)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -328,61 +308,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['H', 'e', 'l', 'l', 'o', ',', 'w', 'o', 'r', 'l', 'd', '!']\n"
-     ]
-    }
-   ],
-   "source": [
-    "text = \"Hello, world!\"\n",
-    "pattern = r'\\S'\n",
-    "\n",
-    "matches = re.findall(pattern, text)\n",
-    "print(matches)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "H\n",
-      "e\n",
-      "l\n",
-      "l\n",
-      "o\n",
-      "w\n",
-      "o\n",
-      "r\n",
-      "l\n",
-      "d\n",
-      "1\n",
-      "2\n",
-      "3\n"
-     ]
-    }
-   ],
-   "source": [
-    "text = \"Hello, world! 123\"\n",
-    "pattern = r'\\w'\n",
-    "\n",
-    "matches = re.findall(pattern, text)\n",
-    "for i in matches:\n",
-    "    print(','.join(i))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [
@@ -390,13 +315,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['#', ',', ' ', '!']\n"
+      "['Hello,', 'world!']\n"
      ]
     }
    ],
    "source": [
-    "text = \"#Hello, world!\"\n",
-    "pattern = r'\\W'\n",
+    "text = \"Hello, world!\"\n",
+    "pattern = r'\\S+'\n",
     "\n",
     "matches = re.findall(pattern, text)\n",
     "print(matches)"
@@ -405,6 +330,51 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H,e,l,l,o\n",
+      "w,o,r,l,d\n",
+      "1,2,3\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"Hello, world! 123\"\n",
+    "pattern = r'\\w+'\n",
+    "\n",
+    "matches = re.findall(pattern, text)\n",
+    "for i in matches:\n",
+    "    print(','.join(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['#', ', ', '!']\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"#Hello, world!\"\n",
+    "pattern = r'\\W+'\n",
+    "\n",
+    "matches = re.findall(pattern, text)\n",
+    "print(matches)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
