--- a/Python Basics/9.File_Handling/file_handle.ipynb
+++ b/Python Basics/9.File_Handling/file_handle.ipynb
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -843,18 +843,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Name', 'Age', 'City']\n",
-      "['Alice', '30', 'New York']\n",
-      "['Bob', '35', 'London']\n",
-      "['Bob', '35', 'London']\n",
-      "['Abc', '34', 'Baglore']\n"
+      "['Name', 'Age', 'city']\n",
+      "['John', '25', 'New York']\n",
+      "['Jane', '30', 'Blore']\n"
      ]
     }
    ],
@@ -876,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -907,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -918,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -938,7 +936,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alice 30\n",
+      "Bob 35\n",
+      "Charlie 25\n",
+      "Xyz 36\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"data.csv\", \"r\") as file:\n",
+    "    reader = csv.DictReader(file)\n",
+    "    for row in reader:\n",
+    "        print(row[\"Name\"], row[\"Age\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -961,14 +982,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['30', '35', '25', '36']\n"
+      "['New York', 'London', 'San Francisco', 'Baglore']\n"
      ]
     }
    ],
@@ -976,7 +997,7 @@
     "with open(\"data.csv\", \"r\", newline='') as file:\n",
     "    reader = csv.reader(file)\n",
     "    header = next(reader)  # Skip the header row if there is one\n",
-    "    age_column = [row[1] for row in reader]  # Assuming \"Age\" is the second column\n",
+    "    age_column = [row[2] for row in reader]  # Assuming \"Age\" is the second column\n",
     "    print(age_column)"
    ]
   },
@@ -990,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1115,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1138,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1151,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1183,6 @@
       "{'name': 'Bob', 'age': 25, 'city': 'Los Angeles'}\n",
       "{'name': 'Charlie', 'age': 35, 'city': 'Chicago'}\n",
       "{'name': {'First_name': '777', 'Last_name': 'Charli'}, 'age': 28, 'city': 'San Francisco'}\n",
-      "[{'name': 'Python', 'age': 31, 'city': 'Bangalore'}]\n",
       "[{'name': 'Python', 'age': 31, 'city': 'Bangalore'}]\n"
      ]
     }
@@ -1183,24 +1203,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File content:\n",
-      "Hello Hi How ru\n",
-      "Good NightPython\n",
-      "Python\n",
-      "Python\n"
+      "File not found at path: D:\\Python\\Python Basics\\9.File_Handling\\myfile1.txt\n"
      ]
     }
    ],
    "source": [
     "def read():\n",
-    "    file_path = r'D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt'\n",
+    "    file_path = r'D:\\Python\\Python Basics\\9.File_Handling\\myfile1.txt'\n",
     "    \n",
     "    try:\n",
     "        with open(file_path, 'r') as f:\n",
