--- a/Python Basics/9.File_Handling/file_handle.ipynb
+++ b/Python Basics/9.File_Handling/file_handle.ipynb
@@ -11,47 +11,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Types Of Files In Python:**\n",
+    "#### **What is File Handling?**\n",
+    "File handling in Python allows you to perform operations on files, such as reading, writing, appending, and deleting. It enables data persistence, as data stored in files can be accessed and modified later.\n",
     "\n",
-    "There are two types of files in python, there are:\n",
+    "#### **Types of Files:**\n",
+    "- Text Files: Human-readable files like .txt, .csv.\n",
+    "- Binary Files: Non-human-readable files like .jpg, .exe.\n",
     "\n",
-    "-----> Text files\n",
-    "\n",
-    "-----> Binary files"
+    "#### **Why File Handling is Important:**\n",
+    "- **Data Storage Beyond Program Execution:** Programs often need to store data beyond their runtime. Without file handling, any data generated during a program’s execution would be lost when the program terminates. File handling allows data to persist and be reused when needed.\n",
+    "- **Handling Large Data Sets:** Many real-world applications deal with large volumes of data that cannot be fully processed in memory (RAM). File handling enables storing such data on disk, where it can be accessed and processed incrementally.\n",
+    "- **Record Keeping and Logging:** Many applications require continuous logging or recording of events, errors, or user activities. Files are the standard way to store this information for later analysis, monitoring, and debugging.\n",
+    "- **Flexibility in Data Formats:** File handling allows developers to choose the most suitable format for storing data (e.g., text, binary, CSV, JSON, XML). This flexibility supports a wide range of use cases, from simple text storage to complex data structures.\n",
+    "- Process data from external sources like configuration files."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Opening a File:**\n",
-    "We should use open() function to open a file. This function accepts 'filename' and 'open mode' in which to open the file.\n",
+    "### **Opening and Closing Files**\n",
     "\n",
-    "file handler = open('file name', 'open mode')"
+    "#### **Syntax**\n",
+    "```\n",
+    "file = open('filename', mode)\n",
+    "file.close()\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " -----> w mode:-\tTo wirte data into file. If any data is already present in the file,it would be deleted and the present data will be stored.\n",
-    "\n",
-    " -----> r mode:-   To read data from the file. The file pointer is positioned at the beginning of the file.\n",
-    "\n",
-    " -----> r+ Mode:- Opens the file for both reading and writing. The file pointer is placed at the beginning of the file. If the file does not exist, it raises a FileNotFoundError.\n",
-    "\n",
-    " -----> w+ mode:-Opens the file for both reading and writing. The file is truncated (emptied) when opened. If the file does not exist, a new file is created.\n",
-    "\n",
-    " -----> a   To append data to the file. Appending means adding at the end of existing data.The filepointer is placed at the end of the file.if the  file does not exist, it will create a new file for writing data.\n",
-    "\n",
-    " -----> a+  To append and read data of a file.The file pointer will be at the end of the file if the file exists. If the file does not exist, it creates a new file for reading and writing."
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Opening a file open():**\n",
+    "**Opening a file `open()`:**\n",
     "\n",
     "When the open() function is used to open a file, it returns a pointer to the beginning of the file. This is called 'file handler' or 'file object'.\n",
     "\n",
@@ -62,37 +61,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Closing a file close():**\n",
+    "**Closing a file `close()`:**\n",
     "\n",
     "A file which is opened should be closed using the close() method. Once a file is opened but not closed, then the data of the file may be corrupted or deleted in some cases. Also, if the file is not closed, the memory utilized by the file is not freed, leading to problems like insufficient memory. This happens when we are working with serval files simultaneously. Hence it is mandatory to close the file.\n",
     "\n",
     "f.close()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### **Why**\n",
-    "1. Data Storage Beyond Program Execution:Programs often need to store data beyond their runtime. Without file handling, any data generated during a program’s execution would be lost when the program terminates. File handling allows data to persist and be reused when needed.\n",
-    "\n",
-    "2. Handling Large Data Sets:Many real-world applications deal with large volumes of data that cannot be fully processed in memory (RAM). File handling enables storing such data on disk, where it can be accessed and processed incrementally.\n",
-    "\n",
-    "3. Facilitates Communication Between Programs:Files act as an intermediary for communication between different programs, processes, or systems, even across different platforms. For example, one system may write data to a file, and another system can read and process that data.\n",
-    "\n",
-    "4. Record Keeping and Logging:Many applications require continuous logging or recording of events, errors, or user activities. Files are the standard way to store this information for later analysis, monitoring, and debugging.\n",
-    "\n",
-    "5. Data Backup and Recovery:Files provide a mechanism for storing data safely outside of volatile memory. This is crucial for ensuring data integrity and availability, especially in cases of system crashes or power outages.\n",
-    "\n",
-    "6. Flexibility in Data Formats:File handling allows developers to choose the most suitable format for storing data (e.g., text, binary, CSV, JSON, XML). This flexibility supports a wide range of use cases, from simple text storage to complex data structures.\n",
-    "\n",
-    "7. Cross-Platform Portability:Files can be easily transferred across different systems and platforms. This makes file handling a universal method for sharing data between various machines, operating systems, and programs.\n",
-    "\n",
-    "8. Resource Optimization:Storing data in files minimizes the program’s memory usage. By storing large data sets on disk and reading them as needed, programs can operate efficiently without exhausting system resources.\n",
-    "\n",
-    "9. Compliance and Auditing:For businesses and applications subject to regulations, file handling allows for data storage in a way that can be audited. Logs, transaction records, and other important data can be securely stored and retrieved as needed.\n",
-    "\n",
-    "10. Customization and Automation:File handling allows for automatic creation, reading, writing, and manipulation of files. This is essential for tasks like batch processing, automated backups, or generating reports based on real-time data."
    ]
   },
   {
@@ -119,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Open Modes**"
+    "### **Using with Statement**"
    ]
   },
   {
@@ -494,6 +467,29 @@
    "source": [
     "f = open('myfile.txt','r')\n",
     "f.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Content after writing: This is a new line of text\n"
+     ]
+    }
+   ],
+   "source": [
+    "# w+ example: Writing and then reading the file\n",
+    "with open('test.txt', 'w+') as file:\n",
+    "    file.write('This is a new line of text')  # Writing new content\n",
+    "    file.seek(0)  # Set file pointer to the beginning\n",
+    "    content = file.read()  # Reading the content back\n",
+    "    print('Content after writing:', content)\n",
+    "    file.close()\n"
    ]
   },
   {
