--- a/Python Basics/9.File_Handling/file_handle.ipynb
+++ b/Python Basics/9.File_Handling/file_handle.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
        "'Current content of the file: I am a learner, Python is easy to learn'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
        "['Hello', 'Hi', 'How ru', 'Good Night']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -674,10 +674,7 @@
       "Hello\n",
       "Hi\n",
       "How ru\n",
-      "Good NightSthaya\n",
-      "\n",
-      "Python\n",
-      "Fila Handling\n"
+      "Good NightUse with statements for safer file handling.\n"
      ]
     }
    ],
@@ -705,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -730,10 +727,7 @@
       "Hello\n",
       "Hi\n",
       "How ru\n",
-      "Good NightSthaya\n",
-      "\n",
-      "Python\n",
-      "Fila Handling\n",
+      "Good NightUse with statements for safer file handling.\n",
       "\n"
      ]
     }
@@ -753,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -912,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1068,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1168,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1199,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
