--- a/Pandas/sql_intigration.ipynb
+++ b/Pandas/sql_intigration.ipynb
@@ -517,6 +517,235 @@
    "source": [
     "#mydb.close()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Process Of Inserting Data into SQLite Database**\n",
+    "\n",
+    "- Open SQLiteStudio\n",
+    "- Create a new database named 'eda_practice'\n",
+    "- Create a new table named 'euromart_stores' with the following columns:\n",
+    "    - Store_ID (INTEGER)\n",
+    "    - Store_Name (TEXT)\n",
+    "    - Location (TEXT)\n",
+    "    - Sales (REAL)\n",
+    "    - Date (TEXT)\n",
+    "- Save the table\n",
+    "- Load the data of csv file into the table\n",
+    "    - Right Click on the table\n",
+    "    - Click on 'Import Table Data'\n",
+    "    - Select the csv file\n",
+    "    - Clik on 'Import'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3\n",
+    "import pandas as pd\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Connect to the SQLite database\n",
+    "conn = sqlite3.connect('D:\\Python\\Exploratory Data Analysis\\Pizza\\Cuisine\\Cuisine_data.db')\n",
+    "\n",
+    "# Query the database\n",
+    "query = \"SELECT * FROM CuisineRating;\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>UserID</th>\n",
+       "      <th>AreaCode</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>YOB</th>\n",
+       "      <th>MaritalStatus</th>\n",
+       "      <th>Activity</th>\n",
+       "      <th>Budget</th>\n",
+       "      <th>Cuisines</th>\n",
+       "      <th>Alcohol</th>\n",
+       "      <th>Smoker</th>\n",
+       "      <th>FoodRating</th>\n",
+       "      <th>ServiceRating</th>\n",
+       "      <th>OverallRating</th>\n",
+       "      <th>OftenAS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>153</td>\n",
+       "      <td>Upper East Side,NY</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>Single</td>\n",
+       "      <td>Professional</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Japanese</td>\n",
+       "      <td>Never</td>\n",
+       "      <td>Never</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>123</td>\n",
+       "      <td>St. George,NY</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>Student</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Indian</td>\n",
+       "      <td>Never</td>\n",
+       "      <td>Socially</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>122</td>\n",
+       "      <td>Upper West Side,NY</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1977</td>\n",
+       "      <td>Single</td>\n",
+       "      <td>Student</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Seafood</td>\n",
+       "      <td>Often</td>\n",
+       "      <td>Often</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>153</td>\n",
+       "      <td>Upper East Side,NY</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>1956</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>Professional</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Japanese</td>\n",
+       "      <td>Never</td>\n",
+       "      <td>Socially</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>129</td>\n",
+       "      <td>Central Park,NY</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1997</td>\n",
+       "      <td>Single</td>\n",
+       "      <td>Student</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Filipino</td>\n",
+       "      <td>Socially</td>\n",
+       "      <td>Never</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   UserID  AreaCode            Location  Gender   YOB MaritalStatus  \\\n",
+       "0       1       153  Upper East Side,NY  Female  2006        Single   \n",
+       "1       2       123       St. George,NY  Female  1991       Married   \n",
+       "2       3       122  Upper West Side,NY    Male  1977        Single   \n",
+       "3       4       153  Upper East Side,NY  Female  1956       Married   \n",
+       "4       5       129     Central Park,NY    Male  1997        Single   \n",
+       "\n",
+       "       Activity  Budget  Cuisines   Alcohol    Smoker  FoodRating  \\\n",
+       "0  Professional       3  Japanese     Never     Never           5   \n",
+       "1       Student       3    Indian     Never  Socially           1   \n",
+       "2       Student       5   Seafood     Often     Often           5   \n",
+       "3  Professional       5  Japanese     Never  Socially           3   \n",
+       "4       Student       4  Filipino  Socially     Never           2   \n",
+       "\n",
+       "   ServiceRating  OverallRating OftenAS  \n",
+       "0              4            4.5      No  \n",
+       "1              1            1.0      No  \n",
+       "2              5            5.0     Yes  \n",
+       "3              1            2.0      No  \n",
+       "4              4            3.0      No  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load the data into a pandas DataFrame\n",
+    "df = pd.read_sql(query, conn)\n",
+    "\n",
+    "# Display the first few rows of the DataFrame\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -535,7 +764,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
